# lopress

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.pi-delegations/: feature-designer-2026-05-23-code-editor-block.md  implementer-2026-05-24-change-type-fix.md  implementer-2026-05-24-cleanup-pass.md  implementer-2026-05-24-code-editor-polish.md  implementer-2026-05-24-stage2-execute.md  implementer-2026-05-24-stage3-execute.md  implementer-2026-05-29-editor-ui-review-fixes-9-11.md  implementer-2026-05-29-editor-ui-review-fixes.md  implementer-2026-06-01-responsive-image-rendering.md  planner-2026-05-23-162354-stage0-rename.md  planner-2026-05-23-204002-stage1-code-base-plugin.md  planner-2026-05-23-222202-stage2-code-editor-widget.md  planner-2026-05-24-095542-stage3-ui-mod-decomp.md  planner-2026-05-27-101617-editor-ui-review-fixes.md
base_plugins/code/: manifest.toml
base_plugins/heading/: manifest.toml
base_plugins/image/: manifest.toml
base_plugins/list/: manifest.toml
base_plugins/more/: manifest.toml
base_plugins/paragraph/: manifest.toml
base_plugins/separator/: manifest.toml
base_plugins/table/: manifest.toml
crates/lopress-assets/: Cargo.toml
crates/lopress-assets/src/: cache.rs  error.rs  image.rs  lib.rs
crates/lopress-build/: Cargo.toml
crates/lopress-build/src/: assets.rs  build.rs  cache.rs  cli.rs  error.rs  feed.rs  image_index.rs  lib.rs  not_found.rs  pages.rs  render.rs  robots.rs  scaffold.rs  site.rs  sitemap.rs
crates/lopress-build/tests/: build_integration.rs  cli_tests.rs  scaffold_tests.rs
crates/lopress-build/tests/fixtures/minimal/: lopress.toml
crates/lopress-build/tests/fixtures/minimal/src/pages/: about.md
crates/lopress-build/tests/fixtures/with-draft/: lopress.toml
crates/lopress-build/tests/fixtures/with-draft/src/posts/: done.md  wip.md
crates/lopress-build/tests/fixtures/with-images/: lopress.toml
crates/lopress-build/tests/fixtures/with-images/src/posts/: album.md
crates/lopress-build/tests/fixtures/with-plugin/: lopress.toml
crates/lopress-build/tests/fixtures/with-plugin-theme/: lopress.toml  nav.toml
crates/lopress-build/tests/fixtures/with-plugin-theme/plugins/custom-theme/: plugin.toml
crates/lopress-build/tests/fixtures/with-plugin-theme/plugins/custom-theme/templates/: 404.html  index.html  page.html
crates/lopress-build/tests/fixtures/with-plugin-theme/src/posts/: hello.md
crates/lopress-build/tests/fixtures/with-plugin/plugins/author-bio/: plugin.toml
crates/lopress-build/tests/fixtures/with-plugin/plugins/author-bio/blocks/: author-bio.md
crates/lopress-build/tests/fixtures/with-plugin/plugins/callout/: plugin.toml
crates/lopress-build/tests/fixtures/with-plugin/plugins/callout/assets/: callout.css
crates/lopress-build/tests/fixtures/with-plugin/plugins/callout/blocks/: callout.html
crates/lopress-build/tests/fixtures/with-plugin/src/posts/: demo.md
crates/lopress-core/: Cargo.toml
crates/lopress-core/src/: delimiter.rs  error.rs  frontmatter.rs  lib.rs  parser.rs  perf.rs  serializer.rs  slug.rs  types.rs
crates/lopress-core/tests/: roundtrip.proptest-regressions  roundtrip.rs
crates/lopress-editor/: Cargo.toml
crates/lopress-editor/src/: actions.rs  app.rs  lib.rs  ops.rs  recents.rs  selection.rs  settings.rs  state.rs  undo.rs
crates/lopress-editor/src/ctrl/: input.rs  mod.rs
crates/lopress-editor/src/model/: descriptor.rs  from_core.rs  inline.rs  inserter.rs  mod.rs  style_span.rs  sync.rs  to_core.rs  types.rs
crates/lopress-editor/src/ui/: clipboard.rs  dnd.rs  editor.rs  editor_pane.rs  footer.rs  inspector.rs  link_bar.rs  mod.rs  nav_editor.rs  sel_ctx.rs  sidebar.rs  slash_menu.rs  toolbar.rs  welcome.rs
crates/lopress-editor/src/ui/blocks/: code.rs  code_editor.rs  editor_registry.rs  env.rs  fallback.rs  heading.rs  image.rs  inline_editor.rs  list.rs  mod.rs  opaque.rs  paragraph.rs  plugin.rs  read_more.rs  separator.rs  style_span.rs  table.rs
crates/lopress-editor/src/ui/editing/: action_sink.rs  ctrl_wire.rs  filename_sync.rs  focus.rs  mod.rs  new_doc.rs  pane_key.rs  save_pipeline.rs  undo_redo.rs
crates/lopress-editor/tests/: actions_tests.rs  from_to_core_tests.rs  inline_editor_tests.rs  inline_runs_tests.rs  list_action_tests.rs  list_plugin_meta_tests.rs  model_types_tests.rs  ops_tests.rs  plugin_block_tests.rs  roundtrip_tests.rs  selection_tests.rs  settings_tests.rs  slash_menu_tests.rs  style_span_tests.rs  sync_tests.rs  table_separator_roundtrip_tests.rs  undo_tests.rs
crates/lopress-editor/tests/fixtures/: unknown_plugin.lopress
crates/lopress-editor/tests/fixtures/plugin-roundtrip/: lopress.toml
crates/lopress-editor/tests/fixtures/plugin-roundtrip/plugins/codehighlight/: plugin.toml
crates/lopress-editor/tests/fixtures/plugin-roundtrip/plugins/codehighlight/blocks/: codehighlight.html
crates/lopress-editor/tests/fixtures/plugin-roundtrip/src/posts/: example.md
crates/lopress-gui-host/: Cargo.toml
crates/lopress-gui-host/src/: document.rs  error.rs  lib.rs  session.rs
crates/lopress-gui-host/tests/: deferred_open.rs  session_integration.rs
crates/lopress-plugin/: Cargo.toml
crates/lopress-plugin/src/: error.rs  lib.rs  loader.rs  manifest.rs  registry.rs
crates/lopress-serve/: Cargo.toml
crates/lopress-serve/src/: error.rs  http.rs  inject.rs  lib.rs  mime.rs  router.rs  server.rs  sse.rs
crates/lopress-serve/tests/: serve_integration.rs
crates/lopress-theme/: Cargo.toml
crates/lopress-theme/assets/default-theme/: plugin.toml  theme.css
crates/lopress-theme/assets/default-theme/templates/: index.html  layout.html  post.html  tag.html
crates/lopress-theme/src/: builtin.rs  context.rs  engine.rs  error.rs  lib.rs  resolver.rs
crates/lopress-watch/: Cargo.toml
docs/: architecture.md  plugins.md  themes.md
plugins/audio/: plugin.toml
plugins/button/: plugin.toml
plugins/callout/: plugin.toml
plugins/embed/: plugin.toml
scripts/: check-suppressions.sh  check.sh
src/: main.rs
(+104 files in other folders)
