[package]
name = "lopress-assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
webp = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
